# promptful

./: CLAUDE.md  CONTEXT.md  LICENSE.md  LICENSE_EE.md  opencode.jsonc
.opencode/plugins/: env-protection.js
api/: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 5a138e1ec91d_add_prompt_role.py  b3f9c2d1e8a4_add_categories.py  ea5751e59bee_create_prompts_table.py
api/app/: main.py
api/app/core/: config.py
api/app/db/: session.py
api/app/models/: category.py  prompt.py
api/app/routers/: category.py  prompt.py
api/app/schemas/: category.py  prompt.py
api/tests/: conftest.py  test_category_routes.py  test_prompt_routes.py  test_prompt_schemas.py
docs/adr/: 0001-versions-are-immutable-rows.md  0002-delete-is-a-tombstone-version.md  0003-no-put-optimistic-concurrency-via-id.md  0004-jinja2-text-is-validated-not-rendered.md  0005-categories-with-materialized-path.md  0006-mutations-sync-entity-query-cache.md  0007-prompt-role-is-persisted-and-immutable.md  0008-sdk-gains-a-narrow-slug-based-delete.md
product/ai-specs/: add-categories.md  add-prompt-endpoint.md
sdk/: .gitignore  README.md  pyproject.toml
sdk/examples/: quickstart.py
sdk/src/promptful/: __init__.py  client.py  exceptions.py  models.py
sdk/tests/: conftest.py  test_client.py
ui/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
ui/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ui/components/: category-combobox.tsx  create-prompt-form.tsx  prompt-form.tsx  prompt-guidance-panel.tsx  prompt-list.tsx  prompt-text-editor.tsx
ui/lib/: api.ts  jinja2-highlight.ts  prompt-templates.ts
ui/tests/: create-prompt-form.test.tsx  (+6 more)
(+7 files in other folders)
