[project]
name = "api"
version = "0.1.0"
description = "Promptly - prompt CMS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# api/ on sys.path so tests import the app modules (documents, main, db.*).
pythonpath = ["."]
# auto: plain `async def test_*` are collected without per-test markers.
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
